11/27/2004
----------
1. fix the color of listview in addressbook when lightbar is disabled
   (thanks to Alex Teslik, alex.AT.acatysmoof.com)
2. Hungarian language file translation update
   (thanks to Posz Marton, ful_s.AT.fazekas.hu)


11/26/2004
----------
1. Bulgarian language and template files translation update
   (thanks to Veselin Slavov, vess.AT.slavof.net)
2. fix a but that addressbook related function in message reading/composing
   was not disabled when option enable_addressbook is set to no
3. fix a problem in mime.pl that encode_mimewords didn't encode two bytes of
   a big5 char as a whole
   (reported by wongyf.AT.mail.savs.ilc.edu.tw)


11/25/2004
----------
1. fix a problem that when dangerous chars in foldername in was silently
   removed in folder creation, the resulted string might contain invalid
   chars to user current charset
   (reported by chip.AT.turtle.ee.ncku.edu.tw)
2. new mirror site at Beijing, China
   http://web.lasg.ac.cn/openwebmail/
   (thanks to Wang Jun, wjun.AT.mail.iap.ac.cn)
3. fix a problem that shares/vfile.pl won't work without Text::Iconv.pm
   (reported by marvi.AT.menhir.biz, Marvi Benedet)
4. Polish language and template files translation update
   (thanks to Pawel Foremski, pjf.AT.gna.org)
5. Italian language and template files translation update
   (thanks to Benedet Marvi, marvi.AT.menhir.biz)


11/24/2004
----------
1. fix the "Undefined subroutine &main::get_messageids_sorted_by_date" error
   in openwebmail-tool.pl that
   (reported by Yang Yao-Strong, ysyang.AT.visionnext.com)
2. Polish language and template files translation update
   (thanks to Pawel Foremski, pjf.AT.gna.org)
3. fix a bug that DEFAULT_ restriction in openwebmail.conf is always active
   even when its default_ counterpart has been overridden
   (reported by Yves MARTIN, ymartin.AT.mail.com)
4. fix an error in iconv.pl.fake that the routine is_convertable() should be
   renamed to is_convertible()