@@ -17,7 +17,7 @@
 
 name			Open WebMail
 version			2.41
-releasedate		20041127
+releasedate		20041129
 
 ##############################################################################
 # host dependent configuration
